btn spacing fix

--- a/src/pages/3a Incorporation/style.scss
+++ b/src/pages/3a Incorporation/style.scss
@@ -2,6 +2,7 @@
 @import "../../styles/forms";
 button {
     &.btn {
+        margin: .25rem;
         font-family: 'MADE Evolve Sans Regular';
         font-size: 14px;
         line-height: 16px;
